--- a/Coding/dogsniam.html
+++ b/Coding/dogsniam.html
@@ -9,7 +9,7 @@
     <h1>Dog Breeds</h1>
     <p>Dog breeds are a way to classify dogs based on their physical and behavioral characteristics. There are many different dog breeds, each with their own unique traits and characteristics. Some breeds are known for their intelligence, others for their loyalty, and still others for their physical appearance.
 
-        The American Kennel Club (AKC) is a group that recognizes and registers dog breeds in the United States. They have a list of over 150 breeds that are recognized and registered.
+        The Americsan Kennel Club (AKC) is a group that recognizes and registers dog breeds in the United States. They have a list of over 150 breeds that are recognized and registered.
         
     </p>
     
